# mpi_repaso

./: CMakeLists.txt  conteo  conteo.cpp  correccion_prueba  correccion_prueba.cpp  matrices_v2  matrices_v2.cpp  max_min_colec_s_g  max_min_colec_s_g.cpp  max_min_colec_sinelse  max_min_colec_sinelse.cpp  max_min_pp  max_min_pp.cpp  max_min_reduce.cpp  mpi_sfml.cpp  mpi_sfml.h  mpi_sfml2.cpp  mpi_sfml2.h  mpi_sfml3.cpp  mpi_sfml4.cpp  mpi_sfml5.cpp  mpi_sfml6.cpp  mpi_sfml7.cpp  mpi_sfml8.cpp  mpi_sfml9.cpp  ordenar  prueba  prueba.cpp  readme.md
